added comments to HTML and CSS

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <!--Changed title to have meaning-->
+    <title>Horiseon Marketing Solutions</title>
 </head>
 
 <body>
-    <header class="header">
+    <!--Changed div class="header" to simple Header Element-->
+    <header>
         <h1>Hori<span>seo</span>n</h1>
+        <!--changed div to semantic nav tag-->
         <nav>
             <ul>
                 <li>
+                    <!--Added link to #search-engine-optimization ID-->
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
@@ -24,10 +28,12 @@
             </ul>
         </nav>
     </header>
+    <!--Added semantic tags to hero class-->
     <section class="hero">
         <span role="img" aria-label="Horiseon Staff"></span>
     </section>
     <main>
+        <!--Consolidated unnecessary classes into one class-->
         <div id="search-engine-optimization" class="main-content">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business."/>
             <h2>Search Engine Optimization</h2>
@@ -50,7 +56,9 @@
             </p>
         </div>
     </main>
+    <!--Changed div to semantic aside tag-->
     <aside>
+        <!--Consolidated unnecessary classes into one class-->
         <div class="benefit-group">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -73,6 +81,7 @@
             </p>
         </div>
     </aside>
+    <!--Changed div to semantic Footer tag and removed class-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
