CSS flow reordering

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <!--Changed title to have meaning-->
-    <title>Horiseon Marketing Solutions</title>
+    <title>Horiseon Web Solutions</title>
 </head>
 
 <body>
