--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
     <main>
         <!--Consolidated unnecessary classes into one class-->
         <section id="search-engine-optimization" class="main-content">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business."/>
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A notebook that says SEO on it"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
         <section id="online-reputation-management" class="main-content">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Online Reputation Management The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business."/>
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A person looking at data graphics on a laptop"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
         <section id="social-media-marketing" class="main-content">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Marketing Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation."/>
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Colorful pieces of paper depicting icons and social media terms spread across a table"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
